Bug 154658 - XML Form Document: Fields doesn't calculate any more, connection to instance broken
Summary: XML Form Document: Fields doesn't calculate any more, connection to instance ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0 target:7.5.3 target:7.4.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XML_Form
  Show dependency treegraph
 
Reported: 2023-04-06 09:19 UTC by Robert Großkopf
Modified: 2023-04-13 10:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
XML Document for testing calculation. Calculation should work while changing data. (9.19 KB, application/vnd.oasis.opendocument.text)
2023-04-06 09:19 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-04-06 09:19:04 UTC
Created attachment 186509 [details]
XML Document for testing calculation. Calculation should work while changing data.

Open the attached xml form document.
There are 3 fields.
Write a value in first and a value in second field.
Third field should calculate automatic while changing any value.

This will work here with every version up to LO 7.2.5, fails first here with LO 7.3.0

Hint: Up to LO 7.2.5 the old entries for all fields, saved in instanceData/Summand1 and instanceData/Summand2 will be shown. Also the calculated value could be seen in field 3 and also in instanceData/Summe.
Seems as if the connection between form fields and instance elements doesn't work well.
Comment 1 raal 2023-04-09 21:59:39 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.3.
Adding Cc: to Julien Nabet ; Could you possibly take a look at this one?
Thanks
 90dfd771ec50051d6f7018a07c8b5dd09b9f99e8 is the first bad commit
commit 90dfd771ec50051d6f7018a07c8b5dd09b9f99e8
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Nov 7 22:03:56 2021 +0100

    source 73334560b2dd2d60ac58d2cc2b1a5295490b03e1

124827: Replace some macros in forms part 16 | https://gerrit.libreoffice.org/c/core/+/124827
Comment 2 Julien Nabet 2023-04-10 07:53:51 UTC
(In reply to raal from comment #1)
> This seems to have begun at the below commit in bibisect repository/OS
> linux-64-7.3.
> Adding Cc: to Julien Nabet ; Could you possibly take a look at this one?
> Thanks
>  90dfd771ec50051d6f7018a07c8b5dd09b9f99e8 is the first bad commit
> commit 90dfd771ec50051d6f7018a07c8b5dd09b9f99e8
> Author: Jenkins Build User <tdf@pollux.tdf>
> Date:   Sun Nov 7 22:03:56 2021 +0100
> 
>     source 73334560b2dd2d60ac58d2cc2b1a5295490b03e1
> 
> 124827: Replace some macros in forms part 16 |
> https://gerrit.libreoffice.org/c/core/+/124827

Indeed! Thank you for having spotted this!

I submitted for gerrit this patch:
https://gerrit.libreoffice.org/c/core/+/150174
Comment 3 Commit Notification 2023-04-10 10:02:28 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/26012007e4d20f47697d1336b725e60541df794a

tdf#154658: XML Form Document: Fields doesnt calculate any more

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2023-04-10 10:02:45 UTC
Cherry-pick for 7.5 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/150151
Comment 5 Robert Großkopf 2023-04-12 07:05:15 UTC
Have tested with the attached document. Could bind the fields now. Fields will calculate as expected.

The result will be wrong for decimal values as reported in bug 116451 - but this happens also in older versions of LO.

I will set this one to RESOLVED and FIXED.
Comment 6 Julien Nabet 2023-04-12 10:14:12 UTC
Thank you for the feedback, let's put this one to VERIFIED since you checked.
Comment 7 Commit Notification 2023-04-13 08:43:02 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/5e1a11b674a26c4e2ff765738bd6c415e15786f5

tdf#154658: XML Form Document: Fields doesnt calculate any more

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-04-13 10:42:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/7583dbe23f7620d23328db4a9c9cdd4b0d24df7d

tdf#154658: XML Form Document: Fields doesnt calculate any more

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.