tdf#154658: XML Form Document: Fields doesnt calculate any more

Regression from 73334560b2dd2d60ac58d2cc2b1a5295490b03e1
author	Julien Nabet <serval2412@yahoo.fr>	2021-11-07 15:40:37 +0100
committer	Julien Nabet <serval2412@yahoo.fr>	2021-11-07 21:58:53 +0100
commit	73334560b2dd2d60ac58d2cc2b1a5295490b03e1 (patch)
tree	b5bc4f69dd8ed455c78ea05ab1c5e2f3c25b909e
parent	6be03ac71e0d4927612b4a57ead3d0b245c29c77 (diff)
Replace some macros in forms part 16

A big thank you to Raal for having spotted this!

Change-Id: Ib6f1878897b16b43df287702f82835824c1f766d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150174
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins